--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -38,11 +38,11 @@ See the following for details
 
 This package has been tested on:
 
-**Mac**: ApsimX version 4200
+**Mac**: ApsimX version 4236
 
-**Debian**: ApsimX version 4000
+**Debian**: ApsimX version 4236
 
-**Windows**: ApsimX version 4025
+**Windows**: ApsimX version 4236
 
 Other useful R packages are 'APSIM' and 'apsimr'. The main difference is that these were written to work with the previous generation of APSIM (7.x). This package is thus an update for the new APSIM-X software. Recently, (Oct 2019) I added support for APSIM 'Classic'.
 
@@ -247,22 +247,22 @@ If we want to inspect and edit this file, we need the 'inspect_apsimx_replacemen
 
 ```{r inspect-factorial-0, eval = FALSE}
 ## There are multiple 'Experiments' so we need to pick one
-inspect_apsimx_replacement("Factorial", src.dir = ex.dir,
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
                            root = list("Experiment",NA))
 ##These positions matched  Experiment   1 2 3 4 5 
 ##Error in inspect_apsimx_replacement("Factorial", src.dir = ex.dir, root = ##list("Experiment", : Multiple root nodes found. Please provide a position
 ```
 
-```{r inspect-factorial, eval = FALSE}
+```{r inspect-factorial}
 ## There are multiple 'Experiments' so we need to pick one
-inspect_apsimx_replacement("Factorial", src.dir = ex.dir,
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
                            root = list("Experiment",1))
 ## We need to provide a node
-inspect_apsimx_replacement("Factorial", src.dir = ex.dir,
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
                            root = list("Experiment",1), 
                            node = "Base", display.available = TRUE)
 ## We need to provide a node child
-inspect_apsimx_replacement("Factorial", src.dir = ex.dir,
+inspect_apsimx_replacement("Factorial", src.dir = extd.dir,
                            root = list("Experiment",1), 
                            node = "Base", node.child = "Clock",
                            display.available = TRUE)
@@ -270,42 +270,15 @@ inspect_apsimx_replacement("Factorial", src.dir = ex.dir,
 
 Here we stopped at this level but it is possible to dig deeper using 'node.subchild' and 'node.subsubchild'. It is not possible at this point to dig deeper in the hierarchy level.
 
-### Example for Unix/Linux Only
+### Running the 'Factorial' example
 
-```{r factorial-example, eval = FALSE}
-## This seems to be restricted to 'unix' because
-## Windows does not allow long paths to the file name.
-ex.dir <- auto_detect_apsimx_examples()
-if(.Platform$OS.type == "unix"){
-  fact <- apsimx("Factorial", src.dir = ex.dir, value = "report")
-  ## Summary of the data
-  ## Let's just look at a few variables
-  summary(fact[,c(9,11,13)])
-}
-```
-
-### Example for Windows
-
-Windows has some strange behavior involving paths that I do not quite understand yet. For this we need to use a modified version of Factorial. (This is a work in progress at this point).
-
-Preliminary Steps:
-
-* Copy Factorial example to current directory
-* Modify .met file path
-
-```{r deal-with-factorial-on-windows, eval = FALSE}
-fact.ex <- paste0(ex.dir,"/Factorial.apsimx")
-file.exists(fact.ex)
-file.copy(from = fact.ex,
-          to = ".", copy.mode = FALSE)
-fact <- apsimx("Factorial.apsimx")
-```
+I won't be running the 'Factorial' example here, but if you are interested this is done in the folder 'tests' in the pacakge. 
 
 # File Type (or File Format) Details
 
 APSIM has traditionally generated files that produce simulations using an XML schema. This has been used with APSIM versions of 7.x. With APSIM-X a new format based on JSON files has been implemented and apparently both formats will be supported for the forseeable future. JSON files is less verbose and it is associated with better performance. All distributed APSIM-X examples are 'JSON' now.
 
-The \code{apsimx} package supports inspection and editing of both file types for most components except for the 'Manager'; for which there is partial support. In most instances the parameters that are likely to need inspection and editing are supported but more features will be added in the future as needed. It is possible to test whether a file is XML or JSON.
+The \code{apsimx} package supports inspection and editing of both file types for most components except for the 'Manager'; for which there is partial support. In most instances the parameters that are likely to need inspection and editing are supported but more features will be added in the future as needed. It is possible to test whether a file is XML or JSON (note: this is fragile and might not even be needed in the future).
 
 ```{r filetypes}
 ex.dir <- auto_detect_apsimx_examples()
@@ -330,6 +303,10 @@ It is possible that the function above will soon be obsolete as all .apsimx file
 
 * Make inspect_apsimx and inspect_apsim more consistent
 
+* Add the new feature of 'batch' editing made possible since a recent update to ApsimX (thanks to Drew H.)
+
 * Create custom function for editing the depth of the soil profile 'edit_apsimx_depth'. The issue really is what kind of inconsistencies are possible if depth is not consistent across variables because it is possible to edit the depth now.
+
 * Improve implementation of read_apsimx_all 
+
 * Add tools for optimization and sensitivity analysis.
