--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -303,6 +303,8 @@ examples
 
 * Add more tests using the 'CoverCrop example' (APSIM 'Classic')
 
+* Include parameter estimation example for soybeans
+
 # Working
 
 * **inspect_apsimx** New version of this function seems to be working well
