Working on fixing example paths and improving apsim 'Classic' files

--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -303,7 +303,7 @@ examples
 
 * Add more tests using the 'CoverCrop example' (APSIM 'Classic')
 
-* Include parameter estimation example for soybeans
+* Include parameter estimation example for maize
 
 # Working
 
